2003-12-01  Hans Petter Jansson  <hpj@ximian.com>

	* gui/component/Makefile.am (libevolution_addressbook_la_SOURCES):
	Remove addressbook-storage.[ch] and new-addressbook.[ch].

	* gui/component/addressbook-storage.[ch]: Removed from repository.

	* gui/component/new-addressbook.[ch]: Removed from repository.

	* gui/component/addressbook-component.c (load_uri_for_selection):
	Set source_uid property on view control, not folder_uri.
	(new_addressbook_cb): Call addressbook_config_create_new_source ().
	(edit_addressbook_cb): Implement.
	(fill_popup_menu_callback): Hook up edit_addressbook_cb ().
	(addressbook_component_init): Create the LDAP source group.

	* gui/component/addressbook-config.c (AddressbookSourceDialog):
	Take out the NEW_ADVANCED_UI stuff and add ESource related vars.
	(ldap_unparse_auth)
	(ldap_parse_auth)
	(ldap_unparse_scope)
	(ldap_unparse_ssl)
	(ldap_parse_ssl): Moved here from addressbook-storage.c.
	(addressbook_dialog_get_source)
	(addressbook_dialog_set_source)
	(objectclasses_create_server_table)
	(objectclasses_create_evolution_table)
	(objectclasses_add_foreach)
	(objectclasses_add)
	(objectclasses_sever_double_click)
	(objectclasses_remove_foreach)
	(objectclasses_remove)
	(objectclasses_evolution_double_click)
	(objectclasses_restore_default)
	(server_selection_model_changed)
	(evolution_selection_model_changed)
	(setup_objectclasses_tab): Nuke aging, unfinished NEW_ADVANCED_UI.
	(add_source_clicked)
	(edit_source_clicked)
	(delete_server)
	(delete_source_clicked)
	(ldap_config_control_destroy_callback)
	(ldap_config_control_apply_callback)
	(sources_selection_changed)
	(sources_table_row_activated)
	(ldap_dialog_new)
	(addressbook_dialog_create_sources_table)
	(ldap_config_control_new)
	(addressbook_config_control_new): Nuke config control.
	(create_source_dir)
	(dialog_to_source)
	(dialog_to_temp_source)
	(source_to_uri_parts)
	(source_to_dialog)
	(source_group_changed_cb)
	(source_group_menu_add_groups)
	(folder_page_forward)