@@ -5,7 +5,6 @@ INCLUDES = 					\
 	-I$(top_builddir)/addressbook/backend	\
 	-I$(top_srcdir)/e-util			\
 	-I$(top_builddir)/e-util		\
-	$(PISOCK_CFLAGS)			\
 	$(EVOLUTION_ADDRESSBOOK_CONDUIT_CFLAGS)
 
 # Address Conduit
@@ -22,18 +21,20 @@ libeaddress_conduit_la_LIBADD = 					\
 	$(top_builddir)/camel/libcamel.la	 			\
 	$(EVOLUTION_ADDRESSBOOK_CONDUIT_LIBS)
 
-e-address.conduit: e-address.conduit.in Makefile
+e-address-$(BASE_VERSION).conduit: e-address.conduit.in
 	sed -e 's^\@prefix\@^$(prefix)^g' 				\
 	    -e 's^\@datadir\@^$(datadir)^g' 				\
-	    < $(srcdir)/e-address.conduit.in > e-address.conduit.tmp 	\
-	&& mv e-address.conduit.tmp e-address.conduit
+	    -e 's^\@BASE_VERSION\@^$(BASE_VERSION)^g' 			\
+	    $< > $@
 
+conduitdir = $(datadir)/gnome-pilot/conduits/
+conduit_DATA = e-address-$(BASE_VERSION).conduit
 
-Conduitdir = $(datadir)/gnome-pilot/conduits/
-Conduit_DATA = e-address.conduit
+BUILT_SOURCES = $(conduit_DATA)
+CLEANFILES = $(BUILT_SOURCES)
 
 EXTRA_DIST = \
 	e-address.conduit.in
 
-install-data-local:
-	$(mkinstalldirs) $(Conduitdir)
+dist-hook:
+	cd $(distdir); rm -f $(BUILT_SOURCES)
